[tool.poetry]
name = "ignitionhacks"
version = "0.1.0"
description = "Submission for IgnitionHacks 2021."
authors = [
  "zainthemaynnn <zainyusufazam@gmail.com>",
  "Laptop-Salad Wallis",
  "Zarik Khan",
  "Michael Behrman",
]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Flask = "^2.0.1"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
